@startuml Database Schema - Fitness Challenge Tracker

!define TABLE entity
!define PRIMARY_KEY <<PK>>
!define FOREIGN_KEY <<FK>>
!define NOT_NULL <<NN>>
!define UNIQUE <<U>>

title Fitness Challenge Tracker - Database Schema

' Workouts Table
entity "workouts" as workouts {
  * id : SERIAL <<PK>>
  --
  * user_id : VARCHAR(255) <<NN>>
  * type : VARCHAR(50) <<NN>>
  distance : DECIMAL(10,2)
  * duration : INTEGER <<NN>>
  calories : INTEGER
  notes : TEXT
  created_at : TIMESTAMP
}

' Challenges Table
entity "challenges" as challenges {
  * id : SERIAL <<PK>>
  --
  * name : VARCHAR(255) <<NN>>
  description : TEXT
  * type : VARCHAR(50) <<NN>>
  * start_date : DATE <<NN>>
  * end_date : DATE <<NN>>
  target_value : DECIMAL(10,2)
  target_unit : VARCHAR(20)
  * created_by : VARCHAR(255) <<NN>>
  status : VARCHAR(20)
  created_at : TIMESTAMP
}

' Challenge Participants Table
entity "challenge_participants" as participants {
  * id : SERIAL <<PK>>
  --
  * challenge_id : INTEGER <<FK>>
  * user_id : VARCHAR(255) <<NN>>
  joined_at : TIMESTAMP
  status : VARCHAR(20)
}

' Challenge Progress Table
entity "challenge_progress" as progress {
  * id : SERIAL <<PK>>
  --
  * challenge_id : INTEGER <<FK>>
  * user_id : VARCHAR(255) <<NN>>
  * workout_id : INTEGER <<FK>>
  * progress_value : DECIMAL(10,2) <<NN>>
  * workout_type : VARCHAR(50) <<NN>>
  created_at : TIMESTAMP
}

' Relationships
challenges ||--o{ participants : "has many"
challenges ||--o{ progress : "tracks progress"
workouts ||--o{ progress : "contributes to"

' Add notes
note right of workouts
  Main workout data storage
  - Tracks user activities
  - Links to challenge progress
end note

note right of challenges
  Challenge definitions
  - Created by users
  - Has start/end dates
  - Defines targets
end note

note right of participants
  User participation tracking
  - Who joined which challenges
  - Participation status
  - Join timestamps
end note

note right of progress
  Progress tracking per workout
  - Links workouts to challenges
  - Calculates progress values
  - Tracks completion
end note

' Add constraints
note bottom of participants
  UNIQUE constraint on (challenge_id, user_id)
  Prevents duplicate participation
end note

note bottom of progress
  UNIQUE constraint on (challenge_id, user_id, workout_id)
  Prevents duplicate progress entries
end note

@enduml
